@@ -51,7 +51,7 @@ ENV JBOSS_HOME /opt/jboss/wildfly
 #RUN /opt/jboss/wildfly/bin/add-user.sh admin Pass#3556 --silent
 
 # Increasing Initial heap size & Maximum heap size
-RUN sed -i -- 's/JAVA_OPTS="-Xms64m -Xmx512m/JAVA_OPTS="-Xms1024m -Xmx2048m/g' /opt/jboss/wildfly/bin/standalone.conf
+RUN sed -i -- 's/JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m/JAVA_OPTS="-Xms1024m -Xmx2048m/g' /opt/jboss/wildfly/bin/standalone.conf
 
 # Enable binding to all network interfaces and debugging inside the EAP
 RUN echo "JAVA_OPTS=\"\$JAVA_OPTS -Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0\"" >> /opt/jboss/wildfly/bin/standalone.conf
